fix p whitespace

--- a/src/app/shared/components/template/components/tmpl-components-common.scss
+++ b/src/app/shared/components/template/components/tmpl-components-common.scss
@@ -12,17 +12,6 @@
   }
 }
 
-p {
-  width: 100%;
-  white-space: pre-line;
-  display: table;
-  ul,
-  ol {
-    display: table;
-    margin: 0;
-  }
-}
-
 .left {
   justify-content: start;
 }
